# crawl-pairtree

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/crawl_pairtree/: __about__.py  __init__.py  main.py  namespaces.py  parse_bag.py  parse_dc.py
