[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crawl-pairtree"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "svirgilgood", email = "svirgilgoodwin@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pyoxigraph==0.5.5",
  "ocfl-py==2.0.2",
  "rdflib==7.6.0"
]

[project.urls]
Documentation = "https://github.com/svirgilgood/crawl-pairtree#readme"
Issues = "https://github.com/svirgilgood/crawl-pairtree/issues"
Source = "https://github.com/svirgilgood/crawl-pairtree"

[tool.hatch.version]
path = "src/crawl_pairtree/__about__.py"

[project.scripts]
crawl-pairtree = "crawl_pairtree.main:main"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/crawl_pairtree tests}"

[tool.coverage.run]
source_pkgs = ["crawl_pairtree", "tests"]
branch = true
parallel = true
omit = [
  "src/crawl_pairtree/__about__.py",
]

[tool.coverage.paths]
crawl_pairtree = ["src/crawl_pairtree", "*/crawl-pairtree/src/crawl_pairtree"]
tests = ["tests", "*/crawl-pairtree/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
